#442: (Parts of) Correction of errors with Angular porting - Saving the file to local filesystem should display empty page - Printing the dashboard should result in empty page printing - firefox: clicking on white space selects all texts! - Details dialog - if the icon image is large, it appear large - it should be restricted to 100px height - Details dialog on dashboard does not close on pressing escape - Race condition in loading screen results in loading spinner always showing

--- a/www/_code/css/nlapp.scss
+++ b/www/_code/css/nlapp.scss
@@ -90,7 +90,7 @@ html, body {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  @include user-select(all); 
+  @include user-select(text); 
 }
 
 body {
@@ -207,11 +207,6 @@ $animation-duration: 200ms !default;
 /*-----------------------------------------------------------------------------------------*
  * Thin scroll bar
  *-----------------------------------------------------------------------------------------*/
-.nl-hide {
-    opacity: 0;
-    pointer-events: none;
-}
-
 .nl-full {
   position: absolute;
   width: 100%;
@@ -572,6 +567,7 @@ a.nl-card-img:hover, a.nl-card-img:focus {
 .nl-card-details-dlg {
   &> img {
     float: right;
+    max-height: 100px;
   }
   table {
     margin: 10px 0;
@@ -598,6 +594,19 @@ a.nl-card-img:hover, a.nl-card-img:focus {
   right: 0;
   width: auto;
   height: auto;
+
+  opacity: 0;
+  pointer-events: none;
+  &.nl-show {
+    opacity: 1;
+    pointer-events: auto; 
+  }
+}
+
+@media print {
+  #nl-pagecanvas {
+    display: none !important;
+  }
 }
 
 #nl-topbar {
@@ -703,13 +712,6 @@ a.nl-card-img:hover, a.nl-card-img:focus {
   right: 4px;
 }
 
-#nl-inner-body {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-}
 
 /*-----------------------------------------------------------------------------------------*
  * applayout.html elements: full page view
